--- a/frontend/android/app/src/main/res/drawable/launch_background.xml
+++ b/frontend/android/app/src/main/res/drawable/launch_background.xml
@@ -1,9 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- res/drawable/launch_background.xml -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <bitmap android:gravity="fill" android:src="@drawable/background"/>
-    </item>
-    <item>
-        <bitmap android:gravity="center" android:src="@drawable/splash"/>
-    </item>
+  <!-- 스플래시 배경색 -->
+  <solid android:color="#FFD97D6C"/>
 </layer-list>
