--- a/frontend/android/app/src/main/res/drawable/launch_background.xml
+++ b/frontend/android/app/src/main/res/drawable/launch_background.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-  <item>
-    <scale
-      android:drawable="@drawable/background"
-      android:scaleGravity="center"
-      android:width="100%"
-      android:height="100%" />
-  </item>
+    <item android:drawable="@color/launch_color" />
 
+    <item>
+        <bitmap android:gravity="center" android:src="@mipmap/intro_logo" />
+    </item>
 </layer-list>
